# sdl3-clay-setup

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: common.h  event.c  init.c  init.h  iterate.c  quit.c  state.h  theme.h
src/clay/: renderer.c  renderer.h
src/layout/: current_mode.c  current_mode.h  layout.c  layout.h  toggle_button.c  toggle_button.h
